# Qt-Task

./: .gitignore  CMakeLists.txt  README.md  Task4.pro  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  student_widget.cpp  student_widget.h  students_data.cpp  students_data.h  welcome_dialog.cpp  welcome_dialog.h
